trunk/Archive2/44/a36b737193fcf8/output
main.cpp: In instantiation of 'class Server<NonDerived>':
main.cpp:16:24:   required from here
main.cpp:10:5: error: static assertion failed: Template type must derive from Client
     static_assert(std::is_base_of<Client, CLIENT>::value, "Template type must derive from Client");
     ^
main.cpp: In function 'int main()':
main.cpp:14:20: warning: unused variable 'a' [-Wunused-variable]
     Server<Client> a;
                    ^
main.cpp:15:21: warning: unused variable 'b' [-Wunused-variable]
     Server<Derived> b;
                     ^
main.cpp:16:24: warning: unused variable 'c' [-Wunused-variable]
     Server<NonDerived> c; //error: static assertion failed: Template type must derive from Client
                        ^
